yaml/VpcSubnetSg.yaml
AWSTemplateFormatVersion: 2010-09-09
Resources:
  DevVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: false
      EnableDnsHostnames: false
      Tags:
        - Key: Name
          Value: DevStackVpc
  DevSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: DevVpc
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: us-east-1a
      Tags:
        - Key: Name
          Value: DevSubnet
  WebApplicationServerSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Ref: DevVpc
      GroupDescription: Enable HTTP and SSH access
      Tags:
        - Key: Name
          Value: WebApplicationServer Service Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  # WebApplicationServer:
  #   Type: AWS::EC2::Instance
  #   Properties:
  #     ImageId: ami-0fc61db8544a617ed
  #     InstanceType: t2.micro
  #     Tags:
  #       - Key: Name
  #         Value: WebApplicationServer
  #     KeyName: myKeyName
  #     NetworkInterfaces:
  #       - GroupSet:
  #         - Ref: WebApplicationServerSG
  #         AssociatePublicIpAddress: 'true'
  #         DeviceIndex: '0'
  #         DeleteOnTermination: 'true'
  #         SubnetId:
  #           Ref: DevSubnet
